--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/kingsley.png" alt="Kingsley's Profile Picture">
+        <img src="https://avatars1.githubusercontent.com/u/37128605?s=400&u=54cc1331e7ffc739309ead84a4c94e425fc70dbd&v=4" alt="Kingsley's Profile Picture">
       </td>
       <td>
         <h1>Odo Kingsley Chigekwu</h1>
